# DLLoader

./: .gitignore  CMakeLists.txt  README.md
DLLoader/: CMakeLists.txt  IDLLoader.h
DLLoader/Unix/: DLLoader.h
DLLoader/Win/: DLLoader.h
TestInterface/: CMakeLists.txt  TestInterface.h
TestLibrary/: CMakeLists.txt  TestLibrary.cpp  TestLibrary.h
cmake/: AddDirectory.cmake
test/: CMakeLists.txt  main.cpp
